--- a/css /main.css
+++ b/css /main.css
@@ -5,257 +5,24 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-	  box-sizing: border-box;
-	  -moz-text-size-adjust: 100%;
-	  -ms-text-size-adjust: 100%;
-	  -webkit-text-size-adjust: 100%;
-	  text-size-adjust: 100%;
-	  font-family: sans-serif;
-	}
-
-
-
-
-	.section-dark {
-	  background-color: #ccc;
-	}
-
-
-	.section-mid {
-	  background-color: #e2e2e2;
-	}
-
-
-	.section {
-	  background-color: #efefef;
-	}
-
-
-
-
-	.title {
-	  display: block;
-	  text-align: center;
-	}
-
-
-	.title a {
-	  color: #000;
-	  text-decoration: none;
-	}
-
-
-	.nav {
-	  padding: 0;
-
-
-	  list-style-type: none;
-	}
-
-
-	nav a {
-	  margin: 0em;
-	  color: #0074d7;
-	  text-decoration: none;
-	  font-size: 1.15rem;
-	  display: block;
-	}
-
-
-	nav a:hover {
-	  background-color: #0074d7;
-	  color: #fff;
-	}
-
-
-
-
-	header {
-	  background-color: #cccccc;
-	}
-
-
-	.img-flex{
-	  width: 100%;
-	  display: block;
-	}
-
-
-	.float-left{
-	  float: left;
-	  overflow: hidden;
-	}
-
-
-	.nav-ul{
-	  list-style-type: none;
-	  display:block;
-	  padding: 0;
-
-
-
-
-	}
-	 .nav.li{
-	  width: 100%;
-	 }
-
-
-	.header{
-	  background-color: #c1c1c1;
-	  overflow: hidden;
-	}
-
-
-	h1 a:visited {
-	  color: #000;
-
-
-	}
-
-
-	.header li a{
-	margin: 0em;
-	color: #0074d7;
-	text-decoration: none;
-	font-size: 1.15rem;
-	display: block;
-	}
-
-
-	.header li a:hover{
-	  background-color: #0074D9;
-	  color: #fff;
-	}
-
-
-
-
-	p{
-	  padding: 1em 0;
-	}
-
-
-	footer ol{
-	  list-style-type: none;
-	  padding: 0;
-	  text-align: left;
-	  overflow: hidden;
-
-
-	}
-
-
-	footer div{
-	  float: left;
-	}
-	footer a{
-	  color: blue;
-	}
-
-
-	footer a:hover{
-	  color: #fff;
-	}
-
-
-	footer a:visited{
-	  color: #0074d7;
-	  display:block;
-	}
-
-
-
-
-	footer li{
-	  float: none;
-	  display: block;
-
-
-
-
-	}
-
-
-	footer p{
-	  padding: 0;
-	  margin: 0;
-
-
-	}
-
-
-	.light-grey{
-	  background-color: lightgrey;
-
-
-	}
-
-
-	.dark-grey{
-	  background-color: #c1c1c1;
-	}
-
-
-
-
-	@media only screen and (min-width: 24em) {
-
-
-	  .nav {
-	    text-align: center;
-	  }
-
-
-	  .nav li {
-	    display: inline-block;
-	  }
-
-
-	}
-
-
-	 footer ol li{
-	    display: inline-block;
-	    text-align: center;
-	    float: left;
-	  }
-
-
-	}
-
-
-
-
-	@media only screen and (min-width: 35em) {
-	  .title,
-	  .nav {
-	    text-align: left;
-	  }
-	  h1{
-	  text-align: left;
-	  display: block;
-	  vertical-align: middle;
-	}
-
-
-	}
-
-
-	.venus {
-	  padding: 1em 1em 1em 0;
-	}
-
-
-	.text {
-	  font-size: 2em;
-	  padding: 0.5em;
-	}
-
-
-	.moon {
-	  padding: 1em;
-	}
-
-
-	}
+  box-sizing: border-box;
+  font-family: sans-serif;
+
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+}
